# ui-automation-week

./: .gitignore  README.md
dotnet/: README.md
dotnet/MoTAutomationWeekDotNet/: MoTAutomationWeekDotNet.sln
dotnet/MoTAutomationWeekDotNet/Challenge_1/: Challenge_1.csproj  UnitTest1.cs
dotnet/MoTAutomationWeekDotNet/Challenge_2/: Challenge2Tests.cs
dotnet/MoTAutomationWeekDotNet/Challenge_2/PageObjects/: AdminPage.cs  BasePage.cs
dotnet/MoTAutomationWeekDotNet/Challenge_3/: Challenge_3.csproj
dotnet/MoTAutomationWeekDotNet/Challenge_3/PageObjects/: BasePage.cs  HomePage.cs
dotnet/MoTAutomationWeekDotNet/Challenge_3/Tests/: Challenge3Tests.cs
dotnet/MoTAutomationWeekDotNet/Challenge_4/: Challenge_4.csproj  UnitTest1.cs
dotnet/MoTAutomationWeekDotNet/Challenge_5/: Challenge_5.csproj
dotnet/MoTAutomationWeekDotNet/Challenge_5/DriverFactory/: DriverFactory.cs
dotnet/MoTAutomationWeekDotNet/Challenge_5/PageObjects/: BasePage.cs  HomePage.cs
java/: README.md
java/challenge_2/: pom.xml
java/challenge_3/: pom.xml
java/challenge_5/: pom.xml
js/: README.md
js/challenge_2/: package-lock.json  package.json
js/challenge_3/: package-lock.json  package.json
js/challenge_3/test/specs/: challenge3.js  (+1 more)
js/challenge_5/: jsconfig.json  package-lock.json  package.json  wdio.conf.js
python/: README.md  pyproject.toml
python/challenge_2/: test_ch2.py
python/challenge_3/pages/: home_page.py
python/challenge_3/tests/: test_ch3.py
python/challenge_5/driver/: factory.py
python/challenge_5/pages/: home_page.py
python/challenge_5/tests/: test_ch5.py
(+15 files in other folders)
